parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Program
Rule 1     Program -> Declarations
Rule 2     Declarations -> Declarations Declaration
Rule 3     Declarations -> empty
Rule 4     Declaration -> FunctionDecl
Rule 5     Declaration -> StructDecl
Rule 6     StructDecl -> STRUCT Name LPAREN VarDeclsOpt RPAREN SEMI
Rule 7     VarDeclsOpt -> VarDecls
Rule 8     VarDeclsOpt -> empty
Rule 9     VarDecls -> VarDecl
Rule 10    VarDecls -> VarDecls COMMA VarDecl
Rule 11    VarDecl -> Type Name
Rule 12    Type -> Name
Rule 13    Type -> Type LBRACKET RBRACKET
Rule 14    Name -> IDENT
Rule 15    ParametersOpt -> Parameters
Rule 16    ParametersOpt -> empty
Rule 17    Parameters -> Parameter
Rule 18    Parameters -> Parameters COMMA Parameter
Rule 19    Parameter -> Type Name
Rule 20    FunctionDecl -> Type Name LPAREN ParametersOpt RPAREN LPAREN VarDeclsOpt RPAREN Block
Rule 21    Block -> LBRACE StatementsOpt RBRACE
Rule 22    StatementsOpt -> Statements
Rule 23    StatementsOpt -> empty
Rule 24    Statements -> Statement
Rule 25    Statements -> Statements Statement
Rule 26    Statement -> IfStatement
Rule 27    Statement -> WhileStatement
Rule 28    Statement -> ForStatement
Rule 29    Statement -> BreakStatement
Rule 30    Statement -> ContinueStatement
Rule 31    Statement -> ReturnStatement
Rule 32    Statement -> ExpressionStatement
Rule 33    IfStatement -> IF LPAREN Expression RPAREN Block ElseOpt
Rule 34    ElseOpt -> ELSE Block
Rule 35    ElseOpt -> ELSE IfStatement
Rule 36    ElseOpt -> empty
Rule 37    WhileStatement -> WHILE LPAREN Expression RPAREN Block
Rule 38    ForStatement -> FOR LPAREN ExpressionOpt SEMI ExpressionOpt SEMI ExpressionOpt RPAREN Block
Rule 39    BreakStatement -> BREAK SEMI
Rule 40    ContinueStatement -> CONTINUE SEMI
Rule 41    ReturnStatement -> RETURN Expression SEMI
Rule 42    ReturnStatement -> RETURN SEMI
Rule 43    ExpressionStatement -> Expression SEMI
Rule 44    Expression -> Literal
Rule 45    Expression -> NameExpression
Rule 46    Expression -> ParenthesizedExpression
Rule 47    Expression -> CallExpression
Rule 48    Expression -> NewExpression
Rule 49    Expression -> ArrayExpression
Rule 50    Expression -> FieldAccessExpression
Rule 51    Expression -> ArrayIndexExpression
Rule 52    Expression -> UnaryPrefixOperation
Rule 53    Expression -> BinaryOperation
Rule 54    ExpressionOpt -> Expression
Rule 55    ExpressionOpt -> empty
Rule 56    Literal -> IntegerLiteral
Rule 57    Literal -> FloatLiteral
Rule 58    Literal -> StringLiteral
Rule 59    Literal -> BooleanLiteral
Rule 60    Literal -> NullLiteral
Rule 61    IntegerLiteral -> INTEGER
Rule 62    FloatLiteral -> FLOAT
Rule 63    StringLiteral -> STRING
Rule 64    BooleanLiteral -> TRUE
Rule 65    BooleanLiteral -> FALSE
Rule 66    NullLiteral -> NULL
Rule 67    NameExpression -> Name
Rule 68    ParenthesizedExpression -> LPAREN Expression RPAREN
Rule 69    CallExpression -> Name LPAREN ArgumentsOpt RPAREN
Rule 70    ArgumentsOpt -> Arguments
Rule 71    ArgumentsOpt -> empty
Rule 72    Arguments -> Expression
Rule 73    Arguments -> Arguments COMMA Expression
Rule 74    NewExpression -> NEW Name LPAREN ArgumentsOpt RPAREN
Rule 75    ArrayExpression -> NEW Type LBRACE ArgumentsOpt RBRACE
Rule 76    FieldAccessExpression -> Expression PERIOD Name
Rule 77    ArrayIndexExpression -> Expression LBRACKET Expression RBRACKET
Rule 78    UnaryPrefixOperation -> PLUS Expression
Rule 79    UnaryPrefixOperation -> MINUS Expression
Rule 80    UnaryPrefixOperation -> LNOT Expression
Rule 81    UnaryPrefixOperation -> INCREMENT Expression
Rule 82    UnaryPrefixOperation -> DECREMENT Expression
Rule 83    UnaryPrefixOperation -> ID Expression
Rule 84    BinaryOperation -> Expression PLUS Expression
Rule 85    BinaryOperation -> Expression MINUS Expression
Rule 86    BinaryOperation -> Expression TIMES Expression
Rule 87    BinaryOperation -> Expression DIVIDE Expression
Rule 88    BinaryOperation -> Expression MODULO Expression
Rule 89    BinaryOperation -> Expression LOR Expression
Rule 90    BinaryOperation -> Expression LAND Expression
Rule 91    BinaryOperation -> Expression LT Expression
Rule 92    BinaryOperation -> Expression LE Expression
Rule 93    BinaryOperation -> Expression GT Expression
Rule 94    BinaryOperation -> Expression GE Expression
Rule 95    BinaryOperation -> Expression EQ Expression
Rule 96    BinaryOperation -> Expression NE Expression
Rule 97    BinaryOperation -> Expression EQUALS Expression
Rule 98    BinaryOperation -> Expression PUSH Expression
Rule 99    BinaryOperation -> Expression POP Expression
Rule 100   empty -> <empty>

Terminals, with rules where they appear

BREAK                : 39
COMMA                : 10 18 73
CONTINUE             : 40
DECREMENT            : 82
DIVIDE               : 87
ELSE                 : 34 35
EQ                   : 95
EQUALS               : 97
FALSE                : 65
FLOAT                : 62
FOR                  : 38
GE                   : 94
GT                   : 93
ID                   : 83
IDENT                : 14
IF                   : 33
INCREMENT            : 81
INTEGER              : 61
LAND                 : 90
LBRACE               : 21 75
LBRACKET             : 13 77
LE                   : 92
LNOT                 : 80
LOR                  : 89
LPAREN               : 6 20 20 33 37 38 68 69 74
LT                   : 91
MINUS                : 79 85
MODULO               : 88
NE                   : 96
NEW                  : 74 75
NULL                 : 66
PERIOD               : 76
PLUS                 : 78 84
POP                  : 99
PUSH                 : 98
RBRACE               : 21 75
RBRACKET             : 13 77
RETURN               : 41 42
RPAREN               : 6 20 20 33 37 38 68 69 74
SEMI                 : 6 38 38 39 40 41 42 43
STRING               : 63
STRUCT               : 6
TIMES                : 86
TRUE                 : 64
WHILE                : 37
error                : 

Nonterminals, with rules where they appear

Arguments            : 70 73
ArgumentsOpt         : 69 74 75
ArrayExpression      : 49
ArrayIndexExpression : 51
BinaryOperation      : 53
Block                : 20 33 34 37 38
BooleanLiteral       : 59
BreakStatement       : 29
CallExpression       : 47
ContinueStatement    : 30
Declaration          : 2
Declarations         : 1 2
ElseOpt              : 33
Expression           : 33 37 41 43 54 68 72 73 76 77 77 78 79 80 81 82 83 84 84 85 85 86 86 87 87 88 88 89 89 90 90 91 91 92 92 93 93 94 94 95 95 96 96 97 97 98 98 99 99
ExpressionOpt        : 38 38 38
ExpressionStatement  : 32
FieldAccessExpression : 50
FloatLiteral         : 57
ForStatement         : 28
FunctionDecl         : 4
IfStatement          : 26 35
IntegerLiteral       : 56
Literal              : 44
Name                 : 6 11 12 19 20 67 69 74 76
NameExpression       : 45
NewExpression        : 48
NullLiteral          : 60
Parameter            : 17 18
Parameters           : 15 18
ParametersOpt        : 20
ParenthesizedExpression : 46
Program              : 0
ReturnStatement      : 31
Statement            : 24 25
Statements           : 22 25
StatementsOpt        : 21
StringLiteral        : 58
StructDecl           : 5
Type                 : 11 13 19 20 75
UnaryPrefixOperation : 52
VarDecl              : 9 10
VarDecls             : 7 10
VarDeclsOpt          : 6 20
WhileStatement       : 27
empty                : 3 8 16 23 36 55 71

Parsing method: LALR

state 0

    (0) S' -> . Program
    (1) Program -> . Declarations
    (2) Declarations -> . Declarations Declaration
    (3) Declarations -> . empty
    (100) empty -> .

    STRUCT          reduce using rule 100 (empty -> .)
    IDENT           reduce using rule 100 (empty -> .)
    $end            reduce using rule 100 (empty -> .)

    Program                        shift and go to state 1
    Declarations                   shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> Program .



state 2

    (1) Program -> Declarations .
    (2) Declarations -> Declarations . Declaration
    (4) Declaration -> . FunctionDecl
    (5) Declaration -> . StructDecl
    (20) FunctionDecl -> . Type Name LPAREN ParametersOpt RPAREN LPAREN VarDeclsOpt RPAREN Block
    (6) StructDecl -> . STRUCT Name LPAREN VarDeclsOpt RPAREN SEMI
    (12) Type -> . Name
    (13) Type -> . Type LBRACKET RBRACKET
    (14) Name -> . IDENT

    $end            reduce using rule 1 (Program -> Declarations .)
    STRUCT          shift and go to state 9
    IDENT           shift and go to state 10

    Declaration                    shift and go to state 4
    FunctionDecl                   shift and go to state 5
    StructDecl                     shift and go to state 6
    Type                           shift and go to state 7
    Name                           shift and go to state 8

state 3

    (3) Declarations -> empty .

    STRUCT          reduce using rule 3 (Declarations -> empty .)
    IDENT           reduce using rule 3 (Declarations -> empty .)
    $end            reduce using rule 3 (Declarations -> empty .)


state 4

    (2) Declarations -> Declarations Declaration .

    STRUCT          reduce using rule 2 (Declarations -> Declarations Declaration .)
    IDENT           reduce using rule 2 (Declarations -> Declarations Declaration .)
    $end            reduce using rule 2 (Declarations -> Declarations Declaration .)


state 5

    (4) Declaration -> FunctionDecl .

    STRUCT          reduce using rule 4 (Declaration -> FunctionDecl .)
    IDENT           reduce using rule 4 (Declaration -> FunctionDecl .)
    $end            reduce using rule 4 (Declaration -> FunctionDecl .)


state 6

    (5) Declaration -> StructDecl .

    STRUCT          reduce using rule 5 (Declaration -> StructDecl .)
    IDENT           reduce using rule 5 (Declaration -> StructDecl .)
    $end            reduce using rule 5 (Declaration -> StructDecl .)


state 7

    (20) FunctionDecl -> Type . Name LPAREN ParametersOpt RPAREN LPAREN VarDeclsOpt RPAREN Block
    (13) Type -> Type . LBRACKET RBRACKET
    (14) Name -> . IDENT

    LBRACKET        shift and go to state 12
    IDENT           shift and go to state 10

    Name                           shift and go to state 11

state 8

    (12) Type -> Name .

    LBRACKET        reduce using rule 12 (Type -> Name .)
    IDENT           reduce using rule 12 (Type -> Name .)


state 9

    (6) StructDecl -> STRUCT . Name LPAREN VarDeclsOpt RPAREN SEMI
    (14) Name -> . IDENT

    IDENT           shift and go to state 10

    Name                           shift and go to state 13

state 10

    (14) Name -> IDENT .

    LBRACKET        reduce using rule 14 (Name -> IDENT .)
    IDENT           reduce using rule 14 (Name -> IDENT .)
    LPAREN          reduce using rule 14 (Name -> IDENT .)
    COMMA           reduce using rule 14 (Name -> IDENT .)
    RPAREN          reduce using rule 14 (Name -> IDENT .)
    SEMI            reduce using rule 14 (Name -> IDENT .)
    PERIOD          reduce using rule 14 (Name -> IDENT .)
    PLUS            reduce using rule 14 (Name -> IDENT .)
    MINUS           reduce using rule 14 (Name -> IDENT .)
    TIMES           reduce using rule 14 (Name -> IDENT .)
    DIVIDE          reduce using rule 14 (Name -> IDENT .)
    MODULO          reduce using rule 14 (Name -> IDENT .)
    LOR             reduce using rule 14 (Name -> IDENT .)
    LAND            reduce using rule 14 (Name -> IDENT .)
    LT              reduce using rule 14 (Name -> IDENT .)
    LE              reduce using rule 14 (Name -> IDENT .)
    GT              reduce using rule 14 (Name -> IDENT .)
    GE              reduce using rule 14 (Name -> IDENT .)
    EQ              reduce using rule 14 (Name -> IDENT .)
    NE              reduce using rule 14 (Name -> IDENT .)
    EQUALS          reduce using rule 14 (Name -> IDENT .)
    PUSH            reduce using rule 14 (Name -> IDENT .)
    POP             reduce using rule 14 (Name -> IDENT .)
    LBRACE          reduce using rule 14 (Name -> IDENT .)
    RBRACKET        reduce using rule 14 (Name -> IDENT .)
    RBRACE          reduce using rule 14 (Name -> IDENT .)


state 11

    (20) FunctionDecl -> Type Name . LPAREN ParametersOpt RPAREN LPAREN VarDeclsOpt RPAREN Block

    LPAREN          shift and go to state 14


state 12

    (13) Type -> Type LBRACKET . RBRACKET

    RBRACKET        shift and go to state 15


state 13

    (6) StructDecl -> STRUCT Name . LPAREN VarDeclsOpt RPAREN SEMI

    LPAREN          shift and go to state 16


state 14

    (20) FunctionDecl -> Type Name LPAREN . ParametersOpt RPAREN LPAREN VarDeclsOpt RPAREN Block
    (15) ParametersOpt -> . Parameters
    (16) ParametersOpt -> . empty
    (17) Parameters -> . Parameter
    (18) Parameters -> . Parameters COMMA Parameter
    (100) empty -> .
    (19) Parameter -> . Type Name
    (12) Type -> . Name
    (13) Type -> . Type LBRACKET RBRACKET
    (14) Name -> . IDENT

    RPAREN          reduce using rule 100 (empty -> .)
    IDENT           shift and go to state 10

    Type                           shift and go to state 17
    Name                           shift and go to state 8
    ParametersOpt                  shift and go to state 18
    Parameters                     shift and go to state 19
    empty                          shift and go to state 20
    Parameter                      shift and go to state 21

state 15

    (13) Type -> Type LBRACKET RBRACKET .

    LBRACKET        reduce using rule 13 (Type -> Type LBRACKET RBRACKET .)
    IDENT           reduce using rule 13 (Type -> Type LBRACKET RBRACKET .)
    LBRACE          reduce using rule 13 (Type -> Type LBRACKET RBRACKET .)


state 16

    (6) StructDecl -> STRUCT Name LPAREN . VarDeclsOpt RPAREN SEMI
    (7) VarDeclsOpt -> . VarDecls
    (8) VarDeclsOpt -> . empty
    (9) VarDecls -> . VarDecl
    (10) VarDecls -> . VarDecls COMMA VarDecl
    (100) empty -> .
    (11) VarDecl -> . Type Name
    (12) Type -> . Name
    (13) Type -> . Type LBRACKET RBRACKET
    (14) Name -> . IDENT

    RPAREN          reduce using rule 100 (empty -> .)
    IDENT           shift and go to state 10

    Name                           shift and go to state 8
    VarDeclsOpt                    shift and go to state 22
    VarDecls                       shift and go to state 23
    empty                          shift and go to state 24
    VarDecl                        shift and go to state 25
    Type                           shift and go to state 26

state 17

    (19) Parameter -> Type . Name
    (13) Type -> Type . LBRACKET RBRACKET
    (14) Name -> . IDENT

    LBRACKET        shift and go to state 12
    IDENT           shift and go to state 10

    Name                           shift and go to state 27

state 18

    (20) FunctionDecl -> Type Name LPAREN ParametersOpt . RPAREN LPAREN VarDeclsOpt RPAREN Block

    RPAREN          shift and go to state 28


state 19

    (15) ParametersOpt -> Parameters .
    (18) Parameters -> Parameters . COMMA Parameter

    RPAREN          reduce using rule 15 (ParametersOpt -> Parameters .)
    COMMA           shift and go to state 29


state 20

    (16) ParametersOpt -> empty .

    RPAREN          reduce using rule 16 (ParametersOpt -> empty .)


state 21

    (17) Parameters -> Parameter .

    COMMA           reduce using rule 17 (Parameters -> Parameter .)
    RPAREN          reduce using rule 17 (Parameters -> Parameter .)


state 22

    (6) StructDecl -> STRUCT Name LPAREN VarDeclsOpt . RPAREN SEMI

    RPAREN          shift and go to state 30


state 23

    (7) VarDeclsOpt -> VarDecls .
    (10) VarDecls -> VarDecls . COMMA VarDecl

    RPAREN          reduce using rule 7 (VarDeclsOpt -> VarDecls .)
    COMMA           shift and go to state 31


state 24

    (8) VarDeclsOpt -> empty .

    RPAREN          reduce using rule 8 (VarDeclsOpt -> empty .)


state 25

    (9) VarDecls -> VarDecl .

    COMMA           reduce using rule 9 (VarDecls -> VarDecl .)
    RPAREN          reduce using rule 9 (VarDecls -> VarDecl .)


state 26

    (11) VarDecl -> Type . Name
    (13) Type -> Type . LBRACKET RBRACKET
    (14) Name -> . IDENT

    LBRACKET        shift and go to state 12
    IDENT           shift and go to state 10

    Name                           shift and go to state 32

state 27

    (19) Parameter -> Type Name .

    COMMA           reduce using rule 19 (Parameter -> Type Name .)
    RPAREN          reduce using rule 19 (Parameter -> Type Name .)


state 28

    (20) FunctionDecl -> Type Name LPAREN ParametersOpt RPAREN . LPAREN VarDeclsOpt RPAREN Block

    LPAREN          shift and go to state 33


state 29

    (18) Parameters -> Parameters COMMA . Parameter
    (19) Parameter -> . Type Name
    (12) Type -> . Name
    (13) Type -> . Type LBRACKET RBRACKET
    (14) Name -> . IDENT

    IDENT           shift and go to state 10

    Parameter                      shift and go to state 34
    Type                           shift and go to state 17
    Name                           shift and go to state 8

state 30

    (6) StructDecl -> STRUCT Name LPAREN VarDeclsOpt RPAREN . SEMI

    SEMI            shift and go to state 35


state 31

    (10) VarDecls -> VarDecls COMMA . VarDecl
    (11) VarDecl -> . Type Name
    (12) Type -> . Name
    (13) Type -> . Type LBRACKET RBRACKET
    (14) Name -> . IDENT

    IDENT           shift and go to state 10

    VarDecl                        shift and go to state 36
    Type                           shift and go to state 26
    Name                           shift and go to state 8

state 32

    (11) VarDecl -> Type Name .

    COMMA           reduce using rule 11 (VarDecl -> Type Name .)
    RPAREN          reduce using rule 11 (VarDecl -> Type Name .)


state 33

    (20) FunctionDecl -> Type Name LPAREN ParametersOpt RPAREN LPAREN . VarDeclsOpt RPAREN Block
    (7) VarDeclsOpt -> . VarDecls
    (8) VarDeclsOpt -> . empty
    (9) VarDecls -> . VarDecl
    (10) VarDecls -> . VarDecls COMMA VarDecl
    (100) empty -> .
    (11) VarDecl -> . Type Name
    (12) Type -> . Name
    (13) Type -> . Type LBRACKET RBRACKET
    (14) Name -> . IDENT

    RPAREN          reduce using rule 100 (empty -> .)
    IDENT           shift and go to state 10

    Type                           shift and go to state 26
    Name                           shift and go to state 8
    VarDeclsOpt                    shift and go to state 37
    VarDecls                       shift and go to state 23
    empty                          shift and go to state 24
    VarDecl                        shift and go to state 25

state 34

    (18) Parameters -> Parameters COMMA Parameter .

    COMMA           reduce using rule 18 (Parameters -> Parameters COMMA Parameter .)
    RPAREN          reduce using rule 18 (Parameters -> Parameters COMMA Parameter .)


state 35

    (6) StructDecl -> STRUCT Name LPAREN VarDeclsOpt RPAREN SEMI .
